--- a/templates/index.html
+++ b/templates/index.html
@@ -145,7 +145,11 @@
                        class="file-drop-area relative block w-full border-2 border-dashed border-gray-600 rounded-lg p-10 text-center cursor-pointer hover:border-blue-500 hover:bg-gray-700/50">
                     <div class="flex flex-col items-center justify-center">
                         <svg class="w-12 h-12 text-gray-500 mb-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><use href="#icon-upload"></use></svg>
-                        <p class="text-lg font-medium text-gray-300" id="file-drop-text">
+                        <p style="    display: flex
+;
+    flex-direction: column;
+    align-items: center;
+" class="text-lg font-medium text-gray-300" id="file-drop-text">
                             Drag & drop your CSV file here
                         </p>
                         <p class="text-sm text-gray-500">or click to browse</p>
